<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <GridLayout
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clipToPadding="true"
        android:columnCount="2"
        android:rowCount="4"
        android:maxHeight="56dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/file_details_location"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/filePathText"
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="3"
            />

        <TextView
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/file_details_size"
            android:gravity="center_vertical"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="16dp">

            <ProgressBar
                android:id="@+id/fileSizeCalculationProgressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.ProgressBar"
                />

            <TextView
                android:id="@+id/fileSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"/>
        </FrameLayout>

        <TextView
            android:id="@+id/fileCreationTimeLabel"
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/file_details_creation_time"
            />

        <TextView
            android:id="@+id/fileCreationTimeText"
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/file_details_modification_time"
            />

        <TextView
            android:id="@+id/fileModifiedTimeText"
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            />

    </GridLayout>

</android.support.v4.widget.NestedScrollView>