<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/fileTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/copying_task"
        android:ellipsize="end"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/processedFileName"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/fileTaskProgress"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="@string/calculating_files_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/fileTaskProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="true"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            />

        <ImageButton
            android:id="@+id/cancelTaskBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            style="?android:attr/borderlessButtonStyle"
            android:src="@drawable/ic_close_grey"
            />
    </LinearLayout>

</LinearLayout>